--- a/app/src/main/res/layout/common_flowyear_picker.xml
+++ b/app/src/main/res/layout/common_flowyear_picker.xml
@@ -37,4 +37,27 @@
             android:paddingLeft="1dp" android:paddingTop="1dp" android:paddingRight="1dp"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_margin="10dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="流月选择:"
+            android:textColor="@android:color/darker_gray"
+            android:id="@+id/tvMethodSelect"
+            android:gravity="left"
+            android:layout_gravity="center|left" />
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/spMonthesRange"
+            android:gravity="left"
+            android:layout_gravity="top|left"  />
+    </LinearLayout>
+
 </LinearLayout>
