--- a/app/src/main/res/layout/common_flowmonth_range_textview.xml
+++ b/app/src/main/res/layout/common_flowmonth_range_textview.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:padding="5dp" >
+        android:layout_height="wrap_content" android:padding="5dp" android:gravity="center" >
         <TextView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/tv_flowmonth_item"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:gravity="center"
             android:text="甲子:"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textColor="#555555" />
             <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/tv_flowmonth_tip"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:textColor="#555555"
+                android:gravity="center"
                 android:text="2015.2.10---2015.3.20"/>
     </LinearLayout>
-</LinearLayout>
