--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    >
+    <item android:id="@+id/menuSearch"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title=""
+        android:showAsAction="always"
+        android:actionViewClass="android.widget.SearchView"
+        />
+    <!--<item android:id="@+id/action_sort"-->
+        <!--android:icon="@android:drawable/ic_menu_sort_by_size"-->
+        <!--android:title="sort"-->
+        <!--android:showAsAction="ifRoom">-->
+        <!--<menu>-->
+            <!--<item android:id="@+id/action_sort_size"-->
+                <!--android:icon="@android:drawable/ic_menu_sort_by_size"-->
+                <!--android:title="z-a"-->
+                <!--android:onClick="menuOnSort" />-->
+            <!--<item android:id="@+id/action_sort_alpha"-->
+                <!--android:icon="@android:drawable/ic_menu_sort_alphabetically"-->
+                <!--android:title="a-z"-->
+                <!--android:onClick="menuOnSort" />-->
+        <!--</menu>-->
+    <!--</item>-->
+    <item android:id="@+id/menuAdd" android:title="添加"
         android:orderInCategory="100" android:showAsAction="never" />
-
+    <item android:id="@+id/menuContact" android:title="联系作者"
+        android:orderInCategory="100" android:showAsAction="never" />
 </menu>
