--- a/app/src/main/res/layout/contact_author.xml
+++ b/app/src/main/res/layout/contact_author.xml
@@ -33,6 +33,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="有赞微店链接"
+        android:textSize="20dp"
+        android:layout_marginTop="10dp"
+        android:id="@+id/tvWeiDian"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@android:color/holo_orange_dark"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="QQ: 183425977"
         android:textSize="25dp"
         android:layout_marginTop="20dp"
