--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -21,8 +21,9 @@
                 <!--android:onClick="menuOnSort" />-->
         <!--</menu>-->
     <!--</item>-->
-    <item android:id="@+id/menuAdd" android:title="添加"
-        android:orderInCategory="100" android:showAsAction="never" />
+    <item android:id="@+id/menuAdd" android:title="新增记录"
+        android:orderInCategory="100" android:showAsAction="never"
+     />
     <item android:id="@+id/menuContact" android:title="联系作者"
         android:orderInCategory="100" android:showAsAction="never" />
 </menu>
