--- a/app/src/main/res/layout/common_viewpager_tiaohou.xml
+++ b/app/src/main/res/layout/common_viewpager_tiaohou.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent" >
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView"
+        android:layout_gravity="center_horizontal" >
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -11,4 +16,5 @@
         android:layout_marginTop="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"/>
+    </ScrollView>
 </LinearLayout>
