--- a/app/src/main/res/layout/member_analyze.xml
+++ b/app/src/main/res/layout/member_analyze.xml
@@ -2,6 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <RelativeLayout
+        android:id="@+id/appx_banner_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true" >
+    </RelativeLayout>
     <include
         android:id="@+id/cChongHe"
         layout="@layout/common_viewpager_chonghe" />
