导入用户功能一部分

--- a/app/src/main/res/layout/backup_file_selector.xml
+++ b/app/src/main/res/layout/backup_file_selector.xml
@@ -2,17 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="目录名称: 八字lsw/"
-        android:id="@+id/tvBackUpFileFolder"
-        android:layout_gravity="center_horizontal"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:paddingTop="5dp" android:paddingBottom="5dp"/>
     <View android:layout_width="match_parent"
-        android:layout_height="1dip"
+        android:layout_height="2dip"
+        android:background="#CCC" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="存储位置: /八字lsw/"
+        android:textStyle="bold"
+        android:id="@+id/tvBackUpFileFolder"
+        android:layout_gravity="left"
+        android:paddingLeft="10dp"
+        android:textSize="18dp"
+        android:textColor="#fff"
+        android:background="#f6aa3e"
+        android:paddingTop="8dp" android:paddingBottom="8dp"/>
+    <View android:layout_width="match_parent"
+        android:layout_height="2dip"
         android:background="#CCC" />
     <ListView
         android:layout_weight="1"
@@ -21,7 +27,7 @@
         android:id="@+id/lvFiles"
         android:layout_gravity="center_horizontal" />
     <View android:layout_width="match_parent"
-        android:layout_height="1dip"
+        android:layout_height="2dip"
         android:background="#CCC" />
     <Button
         android:minHeight="35dp"
@@ -38,4 +44,7 @@
         android:id="@+id/btnImport"
         android:layout_marginTop="5dp" android:layout_marginBottom="5dp"
         android:layout_gravity="center" />
+    <View android:layout_width="match_parent"
+        android:layout_height="2dip"
+        android:background="#CCC" />
 </LinearLayout>
