--- a/app/src/main/res/layout/fragment_bottom_bar.xml
+++ b/app/src/main/res/layout/fragment_bottom_bar.xml
@@ -7,10 +7,19 @@
 
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:text="导入记录"
         android:textSize="15dp"
+        android:textColor="#fff"
+        android:background="@drawable/button_flatten"
+        android:minHeight="30dp"
         android:id="@+id/btnImportDialog"
-        android:layout_gravity="center_horizontal|left" />
+        android:layout_gravity="center_horizontal|top" />
 </FrameLayout>
