--- a/app/src/main/res/layout/calendar.xml
+++ b/app/src/main/res/layout/calendar.xml
@@ -1,16 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#fdfdfd"
+    android:orientation="vertical"
+    android:padding="5dp">
 
-    <LinearLayout android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
-        <GridView
-            android:background="@drawable/gv_border_ltr_border"
-            android:layout_width="wrap_content"
+
+        <TextView
+            android:id="@+id/tvDateSelect"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/gv_calendar"/>
+            android:background="@drawable/button_flatten"
+            android:gravity="center"
+            android:text="2015年7月25日 19:50"
+            android:textSize="20dp" />
+
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/tvLunarDateSelect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_flatten"
+        android:gravity="center"
+        android:text=""
+        android:textSize="20dp" />
+
+    <GridView
+        android:id="@+id/gv_calendarTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <GridView
+        android:id="@+id/gv_calendar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvEraYear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="1"
+                android:gravity="center"
+                android:text="乙未"
+                android:textSize="30dp" />
+
+            <TextView
+                android:id="@+id/tvEraMonth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="1"
+                android:gravity="center"
+                android:text="癸未"
+                android:textSize="30dp" />
+
+            <TextView
+                android:id="@+id/tvEraDay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="1"
+                android:gravity="center"
+                android:text="壬寅"
+                android:textSize="30dp" />
+
+            <TextView
+                android:id="@+id/tvEraHour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="1"
+                android:gravity="center"
+                android:text="庚戌"
+                android:textSize="30dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvSolarTerm1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="小暑: 7日18:12"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/tvSolarTerm2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="小暑: 7日18:12"
+                android:textSize="20dp" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
