--- a/app/src/main/res/layout/common_datetime_picker.xml
+++ b/app/src/main/res/layout/common_datetime_picker.xml
@@ -3,14 +3,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <DatePicker
+    <DatePicker android:layout_gravity="center_horizontal"
         android:id="@+id/datepicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:calendarViewShown="false"
         android:startYear="@integer/common_datetime_picker_min_year" />
 
-    <TimePicker
+    <TimePicker android:layout_gravity="center_horizontal"
         android:id="@+id/timepicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
