--- a/app/src/main/res/layout/calendar.xml
+++ b/app/src/main/res/layout/calendar.xml
@@ -25,12 +25,16 @@
     </LinearLayout>
 
     <TextView
+        android:layout_marginBottom="10dp"
+        android:paddingRight="20dp"
+        android:paddingLeft="20dp"
         android:id="@+id/tvLunarDateSelect"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button_flatten"
         android:gravity="center"
-        android:text=""
+        android:layout_gravity="center_horizontal"
+        android:text="二零一五年六月十一"
         android:textSize="20dp" />
 
     <GridView
