--- a/app/src/main/res/layout/calendar.xml
+++ b/app/src/main/res/layout/calendar.xml
@@ -42,10 +42,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <GridView
-        android:id="@+id/gv_calendar"
+    <!--<GridView-->
+        <!--android:id="@+id/gv_calendar"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content" />-->
+
+    <FrameLayout android:id="@+id/fl_calendar"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:layout_width="match_parent"
