--- a/app/src/main/res/anim/vertical_bottom_out.xml
+++ b/app/src/main/res/anim/vertical_bottom_out.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <translate
+    <objectAnimator
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:duration="500"
-        android:fromXDelta="0%"
-        android:fromYDelta="0%"
-        android:toXDelta="0%"
-        android:toYDelta="100%" />
+        android:propertyName="y"
+        android:valueFrom="0"
+        android:valueTo="-1000"
+        android:valueType="floatType" />
 </set>
