--- a/lunar_calendar/src/main/res/layout/activity_day.xml
+++ b/lunar_calendar/src/main/res/layout/activity_day.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <LinearLayout
+    <LinearLayout android:layout_margin="1dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -25,7 +25,11 @@
                 android:textSize="20dp"
                 />
 
-            <TextView
+            <lsw.lunar_calendar.view.DayNotifyPointView android:id="@+id/viewDayNotifyPoint"
+                android:layout_width="6dp" android:layout_gravity="right"
+                android:layout_height="2dp" android:background="#FFD552" />
+
+            <lsw.lunar_calendar.view.LunarDayTextView
                 android:id="@+id/tvLunarDay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
