更新六爻项目

--- a/liuyao/src/main/res/layout/activity_qi_gua.xml
+++ b/liuyao/src/main/res/layout/activity_qi_gua.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="5dp">
 
     <LinearLayout
@@ -60,46 +60,36 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="center"
             android:orientation="vertical">
 
-            <TextView
+            <ImageView android:id="@+id/ivYang"
+                android:src="@drawable/yang"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="" />
+                android:layout_height="wrap_content"  />
 
-            <TextView
+            <ImageView android:id="@+id/ivLaoYang"
+                android:src="@drawable/laoyang"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="" />
+                android:layout_height="wrap_content"  />
 
-            <TextView android:id="@+id/tvYin" android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:layout_gravity="center"
-                android:text="----------------" />
-            <TextView android:id="@+id/tvLaoYin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="x" />
+            <ImageView android:id="@+id/ivYin"
+                android:src="@drawable/yin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"  />
 
-            <TextView android:id="@+id/tvYang"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="|" />
-
-            <TextView android:id="@+id/tvLaoYang"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="o" />
-
-
+            <ImageView android:id="@+id/ivLaoYin"
+                android:src="@drawable/laoyin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"  />
 
         </LinearLayout>
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent">
-
     </LinearLayout>
 
 </LinearLayout>
