--- a/liuyao/src/main/res/drawable/yao_container.xml
+++ b/liuyao/src/main/res/drawable/yao_container.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-
     <stroke
-        android:width="2dp"
-        android:color="#FFFF0000" />
-
-
-
-
-
+        android:width="1dp"
+        android:color="#ccc" />
+    <solid android:color="@android:color/transparent" />
 </shape>
-
