--- a/liuyao/src/main/res/layout/hexagram_build_activity.xml
+++ b/liuyao/src/main/res/layout/hexagram_build_activity.xml
@@ -37,7 +37,7 @@
 
             <include
                 android:id="@+id/cGuaMain"
-                layout="@layout/container_gua" />
+                layout="@layout/hexagram_container" />
 
         </LinearLayout>
 
@@ -51,7 +51,7 @@
 
             <include
                 android:id="@+id/cGuaChanged"
-                layout="@layout/container_gua" />
+                layout="@layout/hexagram_container" />
 
         </LinearLayout>
     </LinearLayout>
