--- a/lunar_calendar/src/main/res/menu/menu_month.xml
+++ b/lunar_calendar/src/main/res/menu/menu_month.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/menuContact" android:title="联系作者"
+        android:orderInCategory="100" android:showAsAction="never" />
     <item android:id="@+id/menuToday" android:title="今天"
         android:orderInCategory="100" android:showAsAction="always" />
 </menu>
