--- a/liuyao/src/main/res/values/styles.xml
+++ b/liuyao/src/main/res/values/styles.xml
@@ -36,6 +36,9 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:background">#ccc</item>
     </style>
+    <style name="TitleTextViewBig" parent="TitleTextView">
+        <item name="android:textSize">18dp</item>
+    </style>
     <style name="TitleTextView">
         <item name="android:textSize">15dp</item>
         <item name="android:layout_width">match_parent</item>
