--- a/liuyao/src/main/res/values/styles.xml
+++ b/liuyao/src/main/res/values/styles.xml
@@ -49,4 +49,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">10dp</item>
     </style>
+    <style name="TextNavigation">
+        <item name="android:background">#ccc</item>
+        <item name="android:textColor">#fff</item>
+    </style>
 </resources>
