增加六爻可选分析日期，导入以前期货数据的卦

--- a/liuyao/src/main/res/layout/hexagram_analyze_activity.xml
+++ b/liuyao/src/main/res/layout/hexagram_analyze_activity.xml
@@ -10,6 +10,16 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical" >
+        <LinearLayout android:orientation="horizontal" android:layout_marginLeft="3dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:id="@+id/tvAnalyzeDateTitle"
+                android:text="分析日期: 默认/" />
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:id="@+id/tvAnalyzeDate"
+                android:text="自选" />
+        </LinearLayout>
 
     <FrameLayout android:id="@+id/fl_Hexagram_Analyzer"
         android:layout_width="match_parent"
