--- a/liuyao/src/main/res/menu/menu_main.xml
+++ b/liuyao/src/main/res/menu/menu_main.xml
@@ -1,5 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".QiGua">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="never" />
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/menuAdd" android:title="新增记录"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
